GNOME Bugzilla – Bug 758215
gstaudiobasesink should it return ERROR for clips with audio corrupt track.
Last modified: 2018-11-03 11:43:56 UTC
When I'm playing to playing clips with audio corrupt track. and it will just quit and report error in gst_audio_base_sink_wait_event() that "sink not negotiated before EOS event" while on GST1.4.5, these clips doesn't meet this issue. I checked gst_audio_base_sink_wait_event() there is a commit for this on GST1.6: commit 1df69786c3b0fb5381616c5ff048002519e28f94 Author: Jan Schmidt <jan@centricular.com> Date: Wed Jan 28 22:42:17 2015 +1100 audiobasesink: Make sure the ringbuffer is started before waiting Don't call the basesink wait_event implementation until we're sure the ringbuffer is running, because it might wait on a non-running clock. But for those clips with corrupt audio track, there might be no output from audio decoder, and thus the audio track have no chance to negotiate. Do it really need return GST_ELEMENT_ERROR() and quit playing for those clips with audio corrupt track? Similar as https://bugzilla.gnome.org/show_bug.cgi?id=741542 audio/video decoder error, we've tried not to return GST_ELEMENT_ERROR(), and keep other track to play normally. could we just print warning(error) instead as what we do for audiodecoder.
-- GitLab Migration Automatic Message -- This bug has been migrated to freedesktop.org's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.freedesktop.org/gstreamer/gst-plugins-base/issues/245.